--- a/excelsior/scss/excelsior/components/_images.scss
+++ b/excelsior/scss/excelsior/components/_images.scss
@@ -115,3 +115,12 @@
   border: 1px solid #999;
   box-shadow: 0 0 3px #999;
 }
+
+#map_canvas img,
+#map_canvas embed,
+#map_canvas object,
+.map_canvas img,
+.map_canvas embed,
+.map_canvas object {
+  max-width: none !important;
+}
