--- a/excelsior/scss/excelsior/components/_navigation.scss
+++ b/excelsior/scss/excelsior/components/_navigation.scss
@@ -41,7 +41,7 @@
   background: #036;
   @include border-radius(0 0 5px 5px);
   box-shadow: 1px 0px 2px #000;
-  height: 40px;
+  height: 55px;
   width: 44px;
   margin: 0 5px 8px;
   padding: 0 4px 4px 4px;
@@ -56,12 +56,36 @@
   border-top: none;
   display: block;
   height: 100%;
-  width: 100%;
-  position: absolute;
-  text-indent: -9999px;
+  margin-top: 4px;
+  position: relative;
   top: 0px;
+  width: 100%;
   z-index: 50;
   @include transition(top 0.2s ease);
+
+  .accessibility-text {
+    text-indent: -9999px;
+    position: absolute;
+  }
+
+  .top-line {
+    top: 38px;
+  }
+
+  .bottom-line {
+    top: 43px;
+  }
+
+  .pull-bar {
+    background: #000;
+    border-bottom: 1px solid #369;
+    display: inline-block;
+    height: 2px;
+    left: 0;
+    position: absolute;
+    width: 81%;
+
+  }
 }
 
 .gov-bar {
