Slight color and positioning tweak

--- a/excelsior/scss/excelsior/components/_navigation.scss
+++ b/excelsior/scss/excelsior/components/_navigation.scss
@@ -69,7 +69,7 @@
   }
 
   .top-line {
-    top: 38px;
+    top: 39px;
   }
 
   .bottom-line {
@@ -77,8 +77,8 @@
   }
 
   .pull-bar {
-    background: #000;
-    border-bottom: 1px solid #369;
+    background: #09223d;
+    border-bottom: 1px solid #144e8c;
     display: inline-block;
     height: 2px;
     left: 0;
