Rewrote the HTML to use better strucute, converted line colors and css markup to SASS

--- a/excelsior/scss/excelsior/_variables.scss
+++ b/excelsior/scss/excelsior/_variables.scss
@@ -20,3 +20,7 @@ $success-color: #5da423;
 
 // Navigation
 $nav-bar-height: 48px;
+
+// Pull Down Tab Colors
+$pulldown-line-dark: #09223d;
+$pulldown-line-light: #144e8c;
