--- a/excelsior/scss/excelsior/_mixins.scss
+++ b/excelsior/scss/excelsior/_mixins.scss
@@ -131,6 +131,11 @@
     background-repeat: repeat-x;
 }
 
+@mixin rgba-fallback($fallBackColor, $rgbaColor) {
+    background-color: $fallBackColor;
+    background-color: $rgbaColor;
+}
+
 // Apply button styles to any element
 @mixin button {
   display: inline-block;
@@ -156,3 +161,5 @@
     text-decoration: none;
   }
 }
+
+
