Added two-liner class

--- a/excelsior/scss/excelsior/_variables.scss
+++ b/excelsior/scss/excelsior/_variables.scss
@@ -24,6 +24,9 @@ $success-color: #5da423;
 // Navigation
 $nav-bar-height: 48px;
 
+// Key Breakpints
+$mobile-desktop-split: 48em;
+
 // Pull Down Tab Colors
 $pulldown-line-dark: #09223d;
 $pulldown-line-light: #144e8c;
