--- a/excelsior/scss/off-canvas.scss
+++ b/excelsior/scss/off-canvas.scss
@@ -177,7 +177,7 @@ $off-canvas-large-width: 60em;
                     color: #fff;
                     margin: 10px;
                     padding: 7px 7px 7px 1px;
-                    position: absolute
+                    position: absolute;
                     right: 0;
                     visibility: hidden;
                 }
