--- a/excelsior/scss/excelsior/components/_navigation.scss
+++ b/excelsior/scss/excelsior/components/_navigation.scss
@@ -266,6 +266,7 @@
         position: absolute;
         top: -1px;
         right: 0;
+        width: 100%;
 
         .site-search {
             background: #fff;
