Revert "active-gov-bar to active-top-bar"
This reverts commit e8a035399185dfe0967d0a5388ac99409a3680a6.

--- a/excelsior/scss/excelsior/components/_sticky_header.scss
+++ b/excelsior/scss/excelsior/components/_sticky_header.scss
@@ -14,10 +14,10 @@
 }
 
 /* Active Gov Bar Styles */
-.sticky-header.active-top-bar .site-bar {
+.sticky-header.active-gov-bar .site-bar {
 	top: 88px !important;
 }
 
-.sticky-header.active-top-bar .pull-down-container {
+.sticky-header.active-gov-bar .pull-down-container {
 	top: 88px;
 }
