--- a/excelsior/scss/off-canvas.scss
+++ b/excelsior/scss/off-canvas.scss
@@ -236,7 +236,7 @@ $off-canvas-large-width: 60em;
             }
         }
 
-        &.active-top-bar {
+        &.active-gov-bar {
             .pull-down-container,
             .site-bar {
                 top: 88px;
