--- a/excelsior/scss/excelsior/_variables.scss
+++ b/excelsior/scss/excelsior/_variables.scss
@@ -30,3 +30,7 @@ $mobile-desktop-split: 48em;
 // Pull Down Tab Colors
 $pulldown-line-dark: #09223d;
 $pulldown-line-light: #144e8c;
+
+// Off-canvas Breakpoints
+$off-canvas-medium-width: 48em;
+$off-canvas-large-width: 60em;
