Fixed Merriweather font issue

--- a/excelsior/scss/excelsior/_variables.scss
+++ b/excelsior/scss/excelsior/_variables.scss
@@ -7,7 +7,7 @@ $font-sans: "SourceSansPro", $font-sans-fallback;
 $font-sans-bold: "SourceSansProBold", $font-sans-fallback;
 $font-sans-italic: "SourceSansProItalic", $font-sans-fallback;
 $font-sans-bold-italic: "SourceSansProBoldItalic", $font-sans-fallback;
-$font-serif: "Merriweather", Georgia, serif;
+$font-serif: "MerriweatherRegular", Georgia, serif;
 $font-icons: "Fontello";
 $icon-down-open: '\e75c'; // down open arrow
 $icon-left-open: '\e75d'; // left open arrow
