--- a/excelsior/scss/excelsior.scss
+++ b/excelsior/scss/excelsior.scss
@@ -3,23 +3,23 @@
 @import "breakpoint";
 @import "excelsior/_variables.scss";
 @import "excelsior/_mixins.scss";
-@import "excelsior/_foundation-override.scss";
+//@import "excelsior/_foundation-override.scss";
 @import "excelsior/components/_global.scss";
 @import "excelsior/components/_visibility.scss";
 @import "excelsior/components/_fonts.scss";
 
 // These files can be re-arranged as necessary, but test any changes
-@import "excelsior/components/_tables.scss";
-@import "excelsior/components/_alerts.scss";
-@import "excelsior/components/_block-to-stack.scss";
-@import "excelsior/components/_buttons.scss";
-@import "excelsior/components/_forms.scss"; // Must come after `buttons`
-@import "excelsior/components/_footer.scss";
-@import "excelsior/components/_lightbox.scss";
-@import "excelsior/components/_lists.scss";
-@import "excelsior/components/_images.scss";
+//@import "excelsior/components/_tables.scss";
+//@import "excelsior/components/_alerts.scss";
+//@import "excelsior/components/_block-to-stack.scss";
+//@import "excelsior/components/_buttons.scss";
+//@import "excelsior/components/_forms.scss"; // Must come after `buttons`
+//@import "excelsior/components/_footer.scss";
+//@import "excelsior/components/_lightbox.scss";
+//@import "excelsior/components/_lists.scss";
+//@import "excelsior/components/_images.scss";
 @import "excelsior/components/_navigation.scss";
-@import "excelsior/components/_sticky-header.scss";
+//@import "excelsior/components/_sticky-header.scss";
 
 
 // Do not change the order of these files:
